# internal/pkg/model/user.go
@@ -10,7 +10,8 @@ type User struct {
 	Email        string    `json:"email" gorm:"uniqueIndex;not null" validate:"required,email,max=255"`
 	Salt         string    `json:"salt,omitempty" gorm:"column:salt;not null"`                   // 盐值，如果为空则自动生成
 	PasswordHash string    `json:"password_hash,omitempty" gorm:"column:password_hash;not null"` // 密码哈希，如果为空则自动生成
-	Status       string    `json:"status" gorm:"not null" validate:"required,oneof=active inactive"`
+	Status       string    `json:"status" gorm:"not null" validate:"required,oneof=active inactive deleted"`
+	Role         string    `json:"role" gorm:"not null" validate:"required,oneof=user admin"`
 	CreatedAt    time.Time `json:"created_at"` // 由 GORM 自动设置
 	UpdatedAt    time.Time `json:"updated_at"` // 由 GORM 自动设置
 }
@@ -18,4 +19,7 @@ type User struct {
 const (
 	UserStatusActive   = "active"
 	UserStatusInactive = "inactive"
+	UserStatusDeleted  = "deleted"
+	UserRoleUser       = "user"
+	UserRoleAdmin      = "admin"
 )
